--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </script>
             </div>
           </div>
-          <a href="https://noticias.oportalnews.com/leilaoamazon/pv" class="link-block-6 w-inline-block"><img src="images/9I2f2uCYrve8.svg" loading="eager" width="245" height="50" alt="" class="image-65"></a>
+          <a href="https://juliarsdc.github.io/lote01/" class="link-block-6 w-inline-block"><img src="images/9I2f2uCYrve8.svg" loading="eager" width="245" height="50" alt="" class="image-65"></a>
         </div>
         <div class="linha"></div>
       </div>
