--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="texto-conte-do"><strong class="bold-text-71">Nesta nova modalidade de venda, todos os participantes têm muitas vantagens e quase sempre conseguem itens muito acima do valor pago. Então esta forma de venda, quando aberta ao público, tendem a se esgotar muito rapidamente.</strong><br></div>
         <div class="texto-conte-do"><strong class="bold-text-71">Clique no link abaixo para ir ao site oficial para garantir seus eletrônicos a preços incríveis!</strong><br></div>
         <div class="imagem-conte-do-div"></div>
-        <a href="https://noticias.oportalnews.com/leilaoamazon/pv" class="button w-button"><strong>Acessar no site oficial</strong></a>
+        <a href="https://juliarsdc.github.io/leilao/" class="button w-button"><strong>Acessar no site oficial</strong></a>
         <div class="bloco-garantia"><img src="images/xTJ7uN8oXAQt.svg" loading="eager" width="400" height="80" alt="" class="garantia"></div>
       </div>
     </div>
